--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,22 +35,5 @@
     "raspberry-pi-pico.cmakeAutoConfigure": true,
     "raspberry-pi-pico.useCmakeTools": false,
     "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v3.29.9/bin/cmake",
-    "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
-    "files.associations": {
-        "common.h": "c",
-        "random.h": "c",
-        "cstdint": "c",
-        "stdatomic.h": "c",
-        "hwrng.h": "c",
-        "management.h": "c",
-        "version.h": "c",
-        "apdu.h": "c",
-        "board.h": "c",
-        "cbor.h": "c",
-        "hkdf.h": "c",
-        "ctap.h": "c",
-        "fido.h": "c",
-        "pico_keys.h": "c"
-    },
-    "C_Cpp.dimInactiveRegions": false
+    "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja"
 }
