--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,16 @@
         "oath.h": "c",
         "board.h": "c",
         "management.h": "c",
-        "version.h": "c"
-    }
+        "version.h": "c",
+        "pico_keys.h": "c",
+        "flash.h": "c",
+        "flash_file_system.h": "c",
+        "usb_descriptors.h": "c",
+        "cstdint": "c",
+        "compare": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c"
+    },
+    "C_Cpp.dimInactiveRegions": false
 }
